--- a/about.html
+++ b/about.html
@@ -1,3 +1,3 @@
-Hello im sagar rathod.
-I'm from rajkot
-I'm working in nextgeneration technology.
+hello sagar im himanshu rathod
+nice to talking with you.
+wish we will meet soon.
